# my_mcp_server

./: .gitignore  README.md  client_stub.py  main.py  pyproject.toml  run_inspector.sh  server.py
config/: custom_config.toml
scripts/: run_all_test.sh  run_mcp_server.sh
src/common/: config.py
src/index/: core.py  schema.py
src/pdf/: element.py  extract.py  pdf.py  readme.md  text.py  utils.py
src/pdf/reader/: doc_conversion.py  docx_conversion.ipynb
test_stubs/: chatbot_generation_stub.py
