[project]
name = "my_mcp_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "mcp>=1.12.0",
    "pdfplumber>=0.11.7",
    "requests>=2.32.4",
    "toml>=0.10.2",
    "uvicorn>=0.35.0",
]
